<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Grapher for android</string>
    <string name="menu_grapher">Grapher by Math_way</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_resize">Resize</string>
    <string name="nav_timer">Timer</string>
    <string name="graphics">Graphics</string>
    <string name="functions">Functions</string>
    <string name="calculator">Calculator</string>
    <string name="update">Update</string>
    <string name="plus" translatable="false">+</string>
    <string name="converting">Converting..</string>
    <string name="updater_errors_two_funcs">We need 2 funcs in parametric and translation.</string>
    <string name="updater_errors_params">We need t or x and y vars in %d graphic</string>
    <string name="saved">saved</string>
    <string name="loaded">loaded</string>
    <string name="updater_errors_recursion">Too long \'goto\' recursion: len</string>
    <string name="updating">Updating..</string>
    <string name="parser_errors_0">Undefined symbol \'%s\'</string>
    <string name="parser_errors_1">%s in %s</string>
    <string name="parser_errors_2">Too little arguments</string>
    <string name="parser_errors_3">Too many arguments</string>
    <string name="parser_errors_4">Bad location of %s</string>
    <string name="parser_errors_5">brackets</string>
    <string name="parser_errors_6">Only vars and lambdas can be in $..$: \'%s\'</string>
    <string name="calculator_errors_0" formatted="true">%s in \'%s\' %s</string>
    <string name="calculator_errors_1" formatted="true">%s in calculator</string>
    <string name="calculator_errors_2" formatted="true">%s in grammar of \'%s\' %s</string>
    <string name="calculator_errors_3">graphic</string>
    <string name="calculator_errors_4">function</string>
    <string name="calculator_errors_5">Too many vars</string>
    <string name="calculator_errors_6">constant</string>
    <string name="timer_dur_fps">Seconds : FPS,</string>
    <string name="dimension">Dimension from : to</string>
    <string name="timer_boomerang_off">Jump</string>
    <string name="timer_boomerang_on">Boomerang</string>
    <string name="simple_error">Couldn\'t understand input</string>
    <string name="clear">Clear</string>
    <string name="rollback">Rollback</string>
    <string name="net_width">Net width</string>
    <string name="load">Load project</string>
    <string name="save">Save project</string>
    <string name="quick_save">Quick save</string>
    <string name="minus" translatable="false">←</string>
    <string name="discretization">Discretization</string>
    <string name="set_color">Set Color</string>
    <string name="update_on_ask">Update on ask</string>
    <string name="feels_time">Feels time</string>
    <string name="function">Function</string>
    <string name="parametric">Parametric</string>
    <string name="implicit">Implicit</string>
    <string name="translation">Translation</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="save_picture">Save picture</string>
    <string name="infrared_imager">Infrared imager</string>
    <string name="rainbow">Rainbow</string>
    <string name="lines_per_cell">Lines per cell</string>
    <string name="using_help">Using help</string>
    <string name="calculator_help">Calculator help</string>
    <string name="extra_info">Extra info</string>
    <string name="version_log">Version log</string>
    <string name="permission_internet">Log takes place on github..\nlet load it</string>
    <string name="loading_log">Loading log..</string>
</resources>